--- a/index.html
+++ b/index.html
@@ -421,9 +421,7 @@
         </a>
 
         <!--==================== SWIPER JS ====================-->
-        <!-- <script src="assets/js/swiper-bundle.min.js"></script> -->
-        <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+        <script src="assets/js/swiper-bundle.min.js"></script>
 
         <!--==================== MAIN JS ====================-->
         <script src="assets/js/main.js"></script>
