--- a/index.html
+++ b/index.html
@@ -375,13 +375,13 @@
 
                 <div class="contact__container container grid">
                     <div>
-                        <div class="contact__information">
+                        <!-- <div class="contact__information">
                             <i class="uil uil-phone contact__icon"></i>
                             <div>
                                 <h3 class="contact__title">Telefono:</h3>
                                 <span class="contact__subtitle">+56987900147</span>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="contact__information">
                             <i class="uil uil-envelope contact__icon"></i>
                             <div>
